# file_calc

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: calculator.h  file_calculator.h  file_handler.h  operations.h  option_handler.h  structs.h  utils.h
laboratory/: aids  df2e690a7e30f733.equ  f314046c5816b921.equ
laboratory/little_somalia/: lil_canada.equ
laboratory/uncorrupted_minnesota/: 2bc470fa533393e3.equ  3272adffa971879c.equ  5ee85379bfa6f1ec.equ  b374c584dd45319f.equ  clam.equ  coffee.equ  gonoreah.equ  readme  spring_park.equ  waconia.equ
laboratory/unsolved/: 010283c72de01933.equ  3eb0d788b791606f.equ  4a67beb270bf1a3b.equ  5b8c3ca7d3cd61a3.equ  df2e690a7e30f733.equ  fd2c21ea3139ab1d.equ
output/: 3eb0d788b791606f.equ  only.equ
specs/: equ_viewer.py
specs/unsolved/: a1462eee6e2855bb.equ  abf6cc8510de7b9a.equ
src/: calculator.c  file_calculator.c  file_handler.c  main  main.c  operations.c  option_handler.c
